Fixed Bloom's Taxonomy diagram overflow in add course modal

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5011,7 +5011,7 @@ input[type=button].btn-block {
 }
 
 .card-header.wizard {
-  text-align:center;
+  text-align:start;
   padding: 1.5rem;
 }
 
